# data-generator

./: .gitignore  Csv.py  CsvReader.py  DDL_CONVERSION_GUIDE.md  DataGenerator.py  Database.py  Gui.py  README.md  example.csv  main.py  persons.csv  pyproject.toml  requirements.txt
Cases/: Address.py  Case.py  Code.py  DateTime.py  Email.py  Etc.py  HumanName.py  Name.py  Number.py  Optional.py  PhoneNumber.py  username.json
Metadata/: Table.py
cases/: Address.py  DateTime.py  Year.py
core/: DataGenerator.py  schema2csv.py
example_ddl/: customer.sql  example.sql
pg-data-generator/cases/: Case.py  Decimal.py  Email.py  Etc.py  Int.py
pg_data_generator/: main.py
pg_data_generator/cases/: Address.py  Boolean.py  Code.py  DateTime.py  Decimal.py  Email.py  Etc.py  Int.py  Name.py  Optional.py  PhoneNumber.py  Varchar.py  Year.py
pg_data_generator/core/: Csv.py  DataGenerator.py  Fk_handler.py
pg_data_generator/utils/: __init__.py  ddl_converter.py  dml_converter.py
results/: README.md
src/: Csv.py  DataGenerator.py  Gui.py  main.py
src/Cases/: Address.py  Case.py  Code.py  DateTime.py  Email.py  Etc.py  Int.py  Name.py  Number.py  Optional.py  PhoneNumber.py
src/core/: Csv.py  DataGenerator.py
test/: test_ddl_conversion.py  test_ddl_to_dml.py  test_dml_generation.py  test_fk_enforcement.py  test_main.py
