[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-generator"
version = "0.1.0"
description = "data-generator for pg"
authors = [{name="Taeho Jeon", email="hohoworld11@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["pg_data_generator"]

# optional dependencies
dependencies = [
    "pandas>=2.0.3",
    "scipy>=1.10.1"
]
