[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-data-generator"
version = "0.1.0"
description = "data-generator for pg"
authors = [{ name = "Taeho Jeon", email = "hohoworld11@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.3",
    "scipy>=1.10.1"
]

[tool.setuptools.packages.find]
where = ["."]
